--- a/campamento.html
+++ b/campamento.html
@@ -57,7 +57,7 @@ Ofrecer oportunidades para socializar.</p>
 <p>llevar bastante hidratación: se deshidratarán por las largas caminatas,</p> 
 <p>llevar kit de medicina: para las personas que sufran de alguna condición médica.</p>llevar kit de medicina: para las personas que sufran de alguna condición médica. 
  <p>Haz clic en el siguiente enlace para ir a otra página:</p>
-    <a href=suesca.html target="_blank">SUESCA</a>
+    <a href=suesca.html target="_blank">SUESCA</a><br><a href=Siachoque.html target="_blank">Siachoque</a>
 </div>
 </body>
 </html>
